@@ -37,5 +37,5 @@ CREATE TABLE cache_extensions (
   intversion int(11) NOT NULL default '0',
   lastversion int(3) NOT NULL default '0',
   lastreviewedversion int(3) NOT NULL default '0',
-  KEY extkey (extkey,version)
+  PRIMARY KEY (extkey,version,repository)
 );
